--- a/package.json
+++ b/package.json
@@ -4,9 +4,31 @@
   "description": "API for Social Marketplace",
   "main": "dist/server.js",
   "scripts": {
-    "start": "node dist/server.js", 
+    "start": "node dist/server.js",
     "dev": "ts-node-dev --respawn server.ts",
     "build": "tsc",
     "prisma:generate": "prisma generate"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/node": "^24.5.2",
+    "prisma": "^6.16.2",
+    "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.9.2"
+  },
+  "dependencies": {
+    "@prisma/client": "^6.16.2",
+    "bcrypt": "^6.0.0",
+    "cors": "^2.8.5",
+    "dompurify": "^3.2.7",
+    "dotenv": "^17.2.2",
+    "express": "^5.1.0",
+    "express-rate-limit": "^8.1.0",
+    "jsdom": "^27.0.0",
+    "jsonwebtoken": "^9.0.2"
   }
 }
