--- a/.env
+++ b/.env
@@ -1,22 +1,4 @@
-// server.ts
-
-import * as dotenv from 'dotenv';
-// Use dotenv to load environment variables from .env file
-dotenv.config();
-
-import app from './src/app';
-
-const PORT = process.env.PORT || 3000;
-
-const server = app.listen(PORT, () => {
-  console.log(`🚀 Server running on http://localhost:${PORT}`);
-  console.log(`API documentation at http://localhost:${PORT}/docs`);
-});
-
-// Graceful Shutdown (Best Practice)
-process.on('SIGTERM', () => {
-  console.log('SIGTERM signal received: Closing HTTP server');
-  server.close(() => {
-    console.log('HTTP server closed.');
-  });
-});
+DATABASE_URL="postgresql://postgres.vtbgrkpkivtuqpmwxpfw:Gbolahan123!@aws-1-eu-west-1.pooler.supabase.com:6543/postgres?pgbouncer=true"
+DIRECT_URL="postgresql://postgres.vtbgrkpkivtuqpmwxpfw:Gbolahan123!@aws-1-eu-west-1.pooler.supabase.com:5432/postgres"
+JWT_SECRET=JWT_SECRET
+PORT=3000
