--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "node dist/server.js",
     "dev": "ts-node-dev --respawn server.ts",
     "build": "tsc",
-    "prisma:generate": "prisma generate"
+    "prisma:generate": "prisma generate",
+    "postinstall": "npm run prisma:generate", 
+    "prestart": "npm run build"  
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
