--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "build": "tsc",
     "prisma:generate": "prisma generate",
     "postinstall": "npm run prisma:generate",
-    "prestart": "npm run build"
+    "prestart": "npm run build",
+    "prisma:seed": "ts-node prisma/seed.ts"
+  },
+    "prisma": {
+    "seed": "npm run prisma:seed"  
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
