--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ DIRECT_URL="postgresql://postgres.vtbgrkpkivtuqpmwxpfw:Gbolahan123!@aws-1-eu-wes
 JWT_SECRET=JWT_SECRET
 NODE_ENV=development
 PORT=3000
+ENCRYPTION_KEY="thisisademosecretenctyptionkey32"  //MUST be 32 characters (32 bytes) long. Use a random hex string in production.
