--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "express": "^5.1.0",
     "express-rate-limit": "^8.1.0",
     "jsdom": "^27.0.0",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "sanitize-html": "^2.17.0"
   }
 }
