--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "express-rate-limit": "^8.1.0",
     "jsdom": "^27.0.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "sanitize-html": "^2.17.0"
   }
 }
